--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,18 @@
 *.exe
 *.out
 *.app
+TGA2Dfresh/Source/.vs/Application/v15/Browse.VC.db
+TGA2Dfresh/Source/.vs/Application/v15/Browse.VC.opendb
+TGA2Dfresh/Source/.vs/Application/v15/Solution.VC.db
+TGA2Dfresh/Source/.vs/Application/v15/Solution.VC.db-shm
+TGA2Dfresh/Source/.vs/Application/v15/Solution.VC.db-wal
+*.idb
+*.ilk
+*.pdb
+*.iobj
+*.ipdb
+TGA2Dfresh/Source/.vs/Application/v15/.suo
+*.idb
+*.log
+*.tlog
+*.res
