--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,15 @@
 *.exe
 *.out
 *.app
+*.tlog
+*.log
+*.pdb
+*.ilk
+*.idb
+*.ipch
+*.res
+TGA2Dfresh/Source/.vs/Application/v15/.suo
+*.db
+*.db-shm
+*.opendb
+*.db-wal
