--- a/TGA2Dfresh/Source/Game/Game.vcxproj
+++ b/TGA2Dfresh/Source/Game/Game.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="Planet.hpp" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameWorld.h" />
+    <ClInclude Include="PlanetManager.hpp" />
     <ClInclude Include="Player.hpp" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="State.h" />
@@ -148,6 +149,7 @@
     <ClCompile Include="Planet.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameWorld.cpp" />
+    <ClCompile Include="PlanetManager.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="State.cpp" />
     <ClCompile Include="StateStack.cpp" />
