--- a/TGA2Dfresh/Source/Game/Game.vcxproj.filters
+++ b/TGA2Dfresh/Source/Game/Game.vcxproj.filters
@@ -23,6 +23,7 @@
     <ClInclude Include="State.h" />
     <ClInclude Include="StateStack.h" />
     <ClInclude Include="StateStackProxy.h" />
+    <ClInclude Include="Pickup.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -36,5 +37,6 @@
     <ClCompile Include="State.cpp" />
     <ClCompile Include="StateStack.cpp" />
     <ClCompile Include="StateStackProxy.cpp" />
+    <ClCompile Include="Pickup.cpp" />
   </ItemGroup>
 </Project>
