--- a/TGA2Dfresh/Source/Game/Game.vcxproj
+++ b/TGA2Dfresh/Source/Game/Game.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClInclude Include="CircleCollider.hpp" />
     <ClInclude Include="Pickup.h" />
+    <ClInclude Include="PickUpManager.h" />
     <ClInclude Include="Planet.hpp" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameWorld.h" />
@@ -148,6 +149,7 @@
   <ItemGroup>
     <ClCompile Include="CircleCollider.cpp" />
     <ClCompile Include="Pickup.cpp" />
+    <ClCompile Include="PickUpManager.cpp" />
     <ClCompile Include="Planet.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameWorld.cpp" />
