--- a/TGA2Dfresh/Source/Game/Game.vcxproj.filters
+++ b/TGA2Dfresh/Source/Game/Game.vcxproj.filters
@@ -7,17 +7,17 @@
     <Filter Include="Collision">
       <UniqueIdentifier>{d3a7cdb0-a1b6-4dd2-b45f-2f5864c0b897}</UniqueIdentifier>
     </Filter>
-    <Filter Include="States">
-      <UniqueIdentifier>{041737fd-b8f6-4d66-b7ba-3e0c818bb1bb}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="StateStack">
-      <UniqueIdentifier>{0cc9184e-49ca-41cc-8691-efae7a0133f6}</UniqueIdentifier>
-    </Filter>
     <Filter Include="GameObjects">
       <UniqueIdentifier>{e9652022-02a9-4769-9bb4-c56e058fa12b}</UniqueIdentifier>
     </Filter>
     <Filter Include="Managers">
       <UniqueIdentifier>{0db0592e-0c0e-4cab-bbc0-e935b78bafe4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="States">
+      <UniqueIdentifier>{041737fd-b8f6-4d66-b7ba-3e0c818bb1bb}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="States\StateStack">
+      <UniqueIdentifier>{0cc9184e-49ca-41cc-8691-efae7a0133f6}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -34,24 +34,6 @@
     <ClInclude Include="Collider.h">
       <Filter>Collision</Filter>
     </ClInclude>
-    <ClInclude Include="CircleCollider.hpp">
-      <Filter>Collision</Filter>
-    </ClInclude>
-    <ClInclude Include="State.h">
-      <Filter>StateStack</Filter>
-    </ClInclude>
-    <ClInclude Include="StateStack.h">
-      <Filter>StateStack</Filter>
-    </ClInclude>
-    <ClInclude Include="StateStackProxy.h">
-      <Filter>StateStack</Filter>
-    </ClInclude>
-    <ClInclude Include="Player.hpp">
-      <Filter>GameObjects</Filter>
-    </ClInclude>
-    <ClInclude Include="Planet.hpp">
-      <Filter>GameObjects</Filter>
-    </ClInclude>
     <ClInclude Include="ColliderManager.h">
       <Filter>Managers</Filter>
     </ClInclude>
@@ -64,12 +46,36 @@
     <ClInclude Include="State.h" />
     <ClInclude Include="StateStack.h" />
     <ClInclude Include="StateStackProxy.h" />
-    <ClInclude Include="Pickup.h" />
-    <ClInclude Include="PlanetManager.hpp" />
-<<<<<<< HEAD
-    <ClInclude Include="PickUpManager.h" />
-=======
->>>>>>> 9f726603876e219f39bbcaf5b5737cb1e22f1cd4
+    <ClInclude Include="PlanetManager.hpp">
+      <Filter>Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="Pickup.h">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Planet.hpp">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.hpp">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="StateStackProxy.h">
+      <Filter>States\StateStack</Filter>
+    </ClInclude>
+    <ClInclude Include="StateStack.h">
+      <Filter>States\StateStack</Filter>
+    </ClInclude>
+    <ClInclude Include="State.h">
+      <Filter>States\StateStack</Filter>
+    </ClInclude>
+    <ClInclude Include="CircleCollider.hpp">
+      <Filter>Collision</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayingState.h">
+      <Filter>States</Filter>
+    </ClInclude>
+    <ClInclude Include="PickUpManager.h">
+      <Filter>Managers</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -78,24 +84,6 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Collider.cpp">
       <Filter>Collision</Filter>
-    </ClCompile>
-    <ClCompile Include="CircleCollider.cpp">
-      <Filter>Collision</Filter>
-    </ClCompile>
-    <ClCompile Include="State.cpp">
-      <Filter>StateStack</Filter>
-    </ClCompile>
-    <ClCompile Include="StateStack.cpp">
-      <Filter>StateStack</Filter>
-    </ClCompile>
-    <ClCompile Include="StateStackProxy.cpp">
-      <Filter>StateStack</Filter>
-    </ClCompile>
-    <ClCompile Include="Player.cpp">
-      <Filter>GameObjects</Filter>
-    </ClCompile>
-    <ClCompile Include="Planet.cpp">
-      <Filter>GameObjects</Filter>
     </ClCompile>
     <ClCompile Include="ColliderManager.cpp">
       <Filter>Managers</Filter>
@@ -107,14 +95,38 @@
     <ClCompile Include="State.cpp" />
     <ClCompile Include="StateStack.cpp" />
     <ClCompile Include="StateStackProxy.cpp" />
-    <ClCompile Include="Pickup.cpp" />
-    <ClCompile Include="PlanetManager.cpp" />
-<<<<<<< HEAD
-    <ClCompile Include="PickUpManager.cpp" />
-=======
     <ClCompile Include="GameWorld.cpp">
       <Filter>States</Filter>
     </ClCompile>
->>>>>>> 9f726603876e219f39bbcaf5b5737cb1e22f1cd4
+    <ClCompile Include="PlanetManager.cpp">
+      <Filter>Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="Pickup.cpp">
+      <Filter>GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="Planet.cpp">
+      <Filter>GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="CircleCollider.cpp">
+      <Filter>Collision</Filter>
+    </ClCompile>
+    <ClCompile Include="StateStackProxy.cpp">
+      <Filter>States\StateStack</Filter>
+    </ClCompile>
+    <ClCompile Include="StateStack.cpp">
+      <Filter>States\StateStack</Filter>
+    </ClCompile>
+    <ClCompile Include="State.cpp">
+      <Filter>States\StateStack</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayingState.cpp">
+      <Filter>States</Filter>
+    </ClCompile>
+    <ClCompile Include="PickUpManager.cpp">
+      <Filter>Managers</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
