New collider constructor

--- a/TGA2Dfresh/Source/Game/Game.vcxproj
+++ b/TGA2Dfresh/Source/Game/Game.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="CircleCollider.hpp" />
     <ClInclude Include="Collider.h" />
     <ClInclude Include="ColliderManager.h" />
+    <ClInclude Include="CollisionFlagEnum.h" />
     <ClInclude Include="Pickup.h" />
     <ClInclude Include="PickUpManager.h" />
     <ClInclude Include="Planet.hpp" />
