--- a/TGA2Dfresh/Source/Game/Game.vcxproj.filters
+++ b/TGA2Dfresh/Source/Game/Game.vcxproj.filters
@@ -76,6 +76,9 @@
     <ClInclude Include="PickUpManager.h">
       <Filter>Managers</Filter>
     </ClInclude>
+    <ClInclude Include="CollisionFlagEnum.h">
+      <Filter>Collision</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
