--- a/TGA2Dfresh/Source/Game/Game.vcxproj.filters
+++ b/TGA2Dfresh/Source/Game/Game.vcxproj.filters
@@ -79,6 +79,9 @@
     <ClInclude Include="CollisionFlagEnum.h">
       <Filter>Collision</Filter>
     </ClInclude>
+    <ClInclude Include="GameObjectData.h">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
